--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -51,7 +51,7 @@
 				<li class="nav-item"><a class="nav-link" th:href="@{/profile}">Profile</a></li>
 				<li class="nav-item"><form action="#" th:action="@{/logout}"
 						method="POST">
-						<button type="submit">Logout</button>
+						<button class="btn btn-primary" type="submit">Logout</button>
 					</form></li>
 			</ul>
 		</div>
