--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -14,24 +14,14 @@
 				<!-- edit profile -->
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<h4>Edit profile</h4>
-						<form method="post" action="">
-							<div class="form-group">
-								<input class="form-control" type="text" name="status"
-									placeholder="Status" value="">
-							</div>
-
-							<div class="form-group">
-								<input class="form-control" type="text" name="location"
-									placeholder="Location" value="">
-							</div>
-
-							<div class="form-group">
-								<input class="btn btn-primary" type="submit"
-									name="update_profile" value="Save">
-							</div>
-						</form>
+						<h4>Giới thiệu</h4>
+						<p>Giới tính: <span th:text="(${profile.gender} == 1)? 'Nam' : 'Nữ'" ></span></p>
+						<p>Ngày sinh: <span th:text="${profile.birthday}"></span></p>
+						<p>Bộ phận: <span th:text="${profile.department}"></span></p>
+<!-- 						<p th:text="${profile.branch}"> -->
+<!-- 						<p th:value="#{profile.hobby}"> -->
 					</div>
+					<button class="btn btn-primary" th:action="@{/edit}">Chỉnh sửa</button>
 				</div>
 				<!-- ./edit profile -->
 			</div>
@@ -39,11 +29,11 @@
 				<!-- user profile -->
 				<div class="media">
 					<div class="media-left">
-						<img src="img/my_avatar.png" class="media-object"
+						<img src="img/my_avatar.png" class="media-object mr-3"
 							style="width: 128px; height: 128px;">
 					</div>
 					<div class="media-body">
-						<h2 class="media-heading">nicholaskajoh</h2>
+						<h2 class="media-heading" th:text="${profile.name}"></h2>
 						<p>Status: I love to code!, Location: Nigeria</p>
 					</div>
 				</div>
